--- a/index.html
+++ b/index.html
@@ -8,28 +8,41 @@
 <link rel="stylesheet" href="assests/materialize/css/materialize.min.css">
 <link rel="stylesheet" href="assests/style.css/style.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="/assests/style.css/util.css">
 </head>
 <body>
 <!-- START -->
-<nav>
-    <div  class="nav-wrapper">
-      <a href="#!"   class="brand-logo" style="float: right;">Logo</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">Javascript</a></li>
-        <li><a href="mobile.html">Mobile</a></li>
-      </ul>
-    </div>
-  </nav>
+<nav class="blue lighten-1 z-depth-5">
+  <div class="nav-wrapper" >
+    <a href="#!" class="brand-logo">Logo</a>
+    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    <ul class="right hide-on-med-and-down">
+      <li><a href="sass.html">Sass</a></li>
+      <li><a href="badges.html">Components</a></li>
+      <li><a href="collapsible.html">Javascript</a></li>
+      <li><a href="mobile.html">Mobile</a></li>
+    </ul>
+  </div>
+</nav>
+  
 
+ 
   <ul class="sidenav" id="mobile-demo">
-    <li><a href="sass.html">Sass</a></li>
-    <li><a href="badges.html">Components</a></li>
-    <li><a href="collapsible.html">Javascript</a></li>
-    <li><a href="mobile.html">Mobile</a></li>
+    <li><div class="user-view">
+      <div class="background">
+        <img src="/assests/images/office.jpg">
+      </div>
+      <a href="#user"><img class="circle" src="/assests/images/Polish_20230917_210351454.jpg"></a>
+      <a href="#name"><span class="white-text name">Hesam Poloee</span></a>
+      <a href="#email"><span class="white-text email">jdandturk@gmail.com</span></a>
+    </div></li>
+    <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
+    <li><a href="#!">Second Link</a></li>
+    <li><div class="divider"></div></li>
+    <li><a class="subheader">Subheader</a></li>
+    <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
   </ul>
+
 <!-- END -->
 <script src="assests/materialize/js/materialize.min.js"></script>
 <script src="assests/main.js/main.js"></script>
